fix(web/style): overflow
Resolves #19

--- a/web/style.css
+++ b/web/style.css
@@ -6,6 +6,7 @@ body {
   white-space: nowrap;
   margin: 0;
   user-select: none;
+  overflow: hidden;
 }
 
 p {
